--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
             <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
+          </li>
             <ul>
-              <li><a onclick="changeLang('tm');" key="turkmen" class="lang">Türkmen</a></li>
-              </li>
-              <li><a onclick="changeLang('ru');" key="russian" class="lang">Русский</a></li>
-              <li><a onclick="changeLang('en');" key="english" class="lang">English</a></li>
+              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="lang"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
+              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="lang"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
+              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="Enlish flag">English</a></li>
             </ul>
           </li>
         </ul>
