--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
             <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
-          </li>
             <ul>
+            </li>
               <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="lang"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
               <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="lang"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
-              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="Enlish flag">English</a></li>
+              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag">English</a></li>
             </ul>
           </li>
         </ul>
@@ -87,7 +87,7 @@
   <!-- ======= hero Section ======= -->
   <section id="hero" class="curved">
     <div class="hero-content slogan" data-aos="fade-up">
-      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span class="lang" key="bitewilik2" >«целостность & сохранность»</span></h2> 
+      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span class="lang" key="bitewilik2">«целостность & сохранность»</span></h2> 
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
