--- a/gallery.html
+++ b/gallery.html
@@ -110,9 +110,9 @@
           </div>
         </div>
 
-          <div class="gallery" data-aos="fade-left">
-            <div class="gallery__card"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
-            <div class="gallery__card"><img src="images/gallery/night_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
+          <div class="gallery-ver" data-aos="fade-left">
+            <div class="gallery__hrz"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
+            <div class="gallery__hrz"><img src="images/gallery/night_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
           </div>
       </div>
 
