--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang" key="adres1desc">POSTAL CODE????, Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
+              <address class="lang" key="adres1desc">745110, Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
             </div>
           </div>      
           <div class="col-md-6">
