--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka1_f">Невооруженная дневная и ночная охрана</h2>
+                <div class="kart__surat"><img src="images/flipcard/1card.jpg" alt=""></div>
+                <h2 class="lang white-color" key="kartocka1_f">Невооруженная дневная и ночная охрана</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka1">Данный вид услуги предполагает нахождение двух смен охранников на стационарных постах в течение 12 часов, а также обход и объезд периметра объекта. Допускается применение других режимов работы (7-и,8-и,12-и часовой или др) для охранников в рамках КЗоТ. Обязательным требованием является постоянное присутствие одного охранника на посту.</p>
@@ -190,8 +190,8 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka2_f">Охрана вахтовым методом</h2>
+                <div class="kart__surat"><img src="images/flipcard/2 NJI CARD.jpg" alt=""></div>
+                <h2 class="lang white-color" key="kartocka2_f">Охрана вахтовым методом</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka2">При применении вахтового метода работы для охранников (12 часовой рабочий день), за сутки на посту будут дежурить 2 охранника, один будет дежурить в дневную смену, а другой в ночную смену. После 15 дневной вахтовой смены на дежурство заступают два новых охранника. Таким образом достигается круглосуточное, постоянное присутствие одного охранника на посту охраны. В общем на таком посту охраны задействовано 4 человека в течении месяца.</p>
@@ -202,8 +202,8 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka3_f">Обеспечение внутри объектного и пропускного режима</h2>
+                <div class="kart__surat"><img src="images/flipcard/3.png" alt=""></div>
+                <h2 class="lang " key="kartocka3_f">Обеспечение внутри объектного и пропускного режима</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka3">Этот вид охранной услуги предполагает оборудование контрольно-пропускного пункта предупредительными знаками и турникетами для осуществления контроля за пропуском людей и транспорта. Здесь предполагается больше охранников, чем в стационарных постах, так как им приходится одновременно выполнят больше объем работы как досмотр транспортных средств, так и большой поток людей.</p>
@@ -214,8 +214,8 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka4_f">Сопровождение грузов и машина сопровождения</h2>
+                <div class="kart__surat"><img src="images/flipcard/4.png" alt=""></div>
+                <h2 class="lang white-color" key="kartocka4_f">Сопровождение грузов и машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka4">Данный вид охранной деятельности предполагает обеспечение транспортом, охраной и сопровождение Заказчика в течение 24 часов в сутки. По требованию Заказчика наша компания имеет возможность предоставлять водителей и охранников со знанием иностранных языков.</p>
@@ -226,7 +226,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/5.jpg" alt=""></div>
                 <h2 class="lang" key="kartocka5_f">Монтаж систем объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
@@ -238,7 +238,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/6.jpg" alt=""></div>
                 <h2 class="lang" key="kartocka6_f">Обслуживание системы объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
