--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
     <div class="hero-slider swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/1.webp');"></div>
-        <div class="swiper-slide" style="background-image: url('images/hero-carousel/4-1.jpg');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/0\ pod\ razmer.webp');"></div>
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/3.webp');"></div>
-        <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/2karusel.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/5karusel.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/6karusel.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/7karusel.webp');"></div>
+        <div class="swiper-slide" style="background-image: url('images/hero-carousel/8karusel.webp');"></div>
         <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
       </div>
     </div>
@@ -178,7 +182,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/1card.jpg" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/1card.webp" alt=""></div>
                 <h2 class="lang white-color" key="kartocka1_f">Невооруженная дневная и ночная охрана</h2>
               </div>
               <div class="flip-box-back">
@@ -190,7 +194,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/2 NJI CARD.jpg" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/2 NJI CARD original.webp" alt=""></div>
                 <h2 class="lang white-color" key="kartocka2_f">Охрана вахтовым методом</h2>
               </div>
               <div class="flip-box-back">
@@ -202,7 +206,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/3.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/3.webp" alt=""></div>
                 <h2 class="lang " key="kartocka3_f">Обеспечение внутри объектного и пропускного режима</h2>
               </div>
               <div class="flip-box-back">
@@ -214,7 +218,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/4.png" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/4.webp" alt=""></div>
                 <h2 class="lang white-color" key="kartocka4_f">Сопровождение грузов и машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
@@ -226,7 +230,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/5.jpg" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/5.webp" alt=""></div>
                 <h2 class="lang" key="kartocka5_f">Монтаж систем объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
@@ -238,7 +242,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <div class="kart__surat"><img src="images/flipcard/6.jpg" alt=""></div>
+                <div class="kart__surat"><img src="images/flipcard/6.webp" alt=""></div>
                 <h2 class="lang" key="kartocka6_f">Обслуживание системы объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
