--- a/gallery.html
+++ b/gallery.html
@@ -88,25 +88,24 @@
         <div class="gallery">
           <div class="setir" data-aos="fade-up">
             <div class="gallery__card">
-              <img src="images/gallery/5.webp" alt="barlag">
-              <div class="gallery__text">1 <br> Shu yere tekst yazyp bolyar</div>
-            </div>
-            <div class="gallery__card"><img src="images/gallery/6.webp" alt="">
-              <div class="gallery__text">4 <br> Men ustunde ishlap otyn hazir NURY AGA</div>
-            </div>
-            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt="">
-              <div class="gallery__text">7</div></div>
+              <img src="images/gallery/5.webp" alt="barlag"><div class="gallery__text">1</div></div>
+            <div class="gallery__card"><img src="images/gallery/6.webp" alt=""><div class="gallery__text">4</div></div>
+            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""><div class="gallery__text">7</div></div>
+              <div class="gallery__card"><img src="images/gallery/taze gosmaly/9 copy.jpg" alt=""><div class="gallery__text">10</div></div>
             <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
             <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text">2</div></div>
             <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text">5</div></div>
-            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">8</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (2) copy.jpg" alt=""><div class="gallery__text">8</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/10 copy.jpg" alt=""><div class="gallery__text">11</div></div>
             
           </div>
           <div class="setir" data-aos="fade-down">
-            <div class="gallery__card"><img src="images/gallery/3.webp" alt=""><div class="gallery__text">3</div></div>
+            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">3</div></div>
             <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">6</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text">9</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">12</div></div>
           </div>
         </div>
 
