--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/0\ pod\ razmer.webp');"></div>
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/3.webp');"></div>
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/2karusel.webp');"></div>
-        <div class="swiper-slide" style="background-image: url('images/hero-carousel/5karusel.webp');"></div>
+        <!-- <div class="swiper-slide" style="background-image: url('images/hero-carousel/5karusel.webp');"></div> -->
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/6karusel.webp');"></div>
         <div class="swiper-slide" style="background-image: url('images/hero-carousel/7karusel.webp');"></div>
-        <div class="swiper-slide" style="background-image: url('images/hero-carousel/8karusel.webp');"></div>
+        <!-- <div class="swiper-slide" style="background-image: url('images/hero-carousel/8karusel.webp');"></div> -->
         <!-- <div class="swiper-slide" style="background-image: url('');"></div> -->
       </div>
     </div>
