--- a/gallery.html
+++ b/gallery.html
@@ -88,33 +88,38 @@
         <div class="gallery">
           <div class="setir" data-aos="fade-up">
             <div class="gallery__card">
-              <img src="images/gallery/5.webp" alt="barlag"><div class="gallery__text">1</div></div>
-            <div class="gallery__card"><img src="images/gallery/6.webp" alt=""><div class="gallery__text">4</div></div>
-            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""><div class="gallery__text">7</div></div>
-              <div class="gallery__card"><img src="images/gallery/taze gosmaly/9 copy.jpg" alt=""><div class="gallery__text">10</div></div>
+              <img src="images/gallery/5.webp" alt="barlag"><div class="gallery__text">Работа на КПП.</div></div>
+            <div class="gallery__card"><img src="images/gallery/6.webp" alt=""><div class="gallery__text">Осмотр въезжающего транспорта.</div></div>
+            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""><div class="gallery__text">Осмотр выезжающего транспорта.
+            </div></div>
+              <div class="gallery__card"><img src="images/gallery/taze gosmaly/9 copy.jpg" alt=""><div class="gallery__text">Осмотр периметра Объекта.
+              </div></div>
             <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
-            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text">2</div></div>
-            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text">5</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (2) copy.jpg" alt=""><div class="gallery__text">8</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/10 copy.jpg" alt=""><div class="gallery__text">11</div></div>
+            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text">Обеспечение внутри объектного и пропускного режима.</div></div>
+            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text">Санитарно-медицинский контроль.</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (2) copy.jpg" alt=""><div class="gallery__text">Контроль пультовой охраны.
+            </div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/10 copy.jpg" alt=""><div class="gallery__text">Контрольно-пропускной режим на КПП.</div></div>
             
           </div>
           <div class="setir" data-aos="fade-down">
-            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">3</div></div>
-            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">6</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text">9</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">12</div></div>
+            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">Проверка ручной клади.</div></div>
+            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">Осмотр большегрузных машин.</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text">Контроль пропускного режима.
+            </div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">Контроль за проходящими через КПП.
+            </div></div>
           </div>
         </div>
 
           <div class="gallery-ver" data-aos="fade-left">
-            <div class="gallery__hrz"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
-            <div class="gallery__hrz"><img src="images/gallery/night_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
+            <div class="gallery__hrz"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Состав сотрудников 1-ой смены.</div></div>
+            <div class="gallery__hrz"><img src="images/gallery/Фото - 3 смена.jpg" alt=""><div class="gallery__text">Состав сотрудников 2-ой смены.</div></div>
+
           </div>
       </div>
-
 
     </main>
 
