--- a/gallery.html
+++ b/gallery.html
@@ -105,7 +105,7 @@
             <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">Проверка ручной клади</div></div>
             <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">Осмотр большегрузных машин</div></div>
             <div class="gallery__card"><img src="images/gallery/taze gosmaly/11 copy.jpg" alt=""><div class="gallery__text">Контроль пропускного режима</div></div>
-            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">Контроль за проходящими через КПП</div></div>
+            <div class="gallery__card"><img src="images/gallery/taze gosmaly/ULANMALY (3) copy.jpg" alt=""><div class="gallery__text">Контроль за проходящими через турникет</div></div>
           </div>
         </div>
 
