--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </li>
               <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="lang"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
               <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="lang"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
-              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag">English</a></li>
+              <!-- <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag">English</a></li> -->
             </ul>
           </li>
         </ul>
