--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
-            <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
+            <!-- <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a> -->
+          </li>
             <ul>
-            </li>
-              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="lang"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
-              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="lang"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
+              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="translate"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
+              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="translate"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
               <!-- <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag">English</a></li> -->
             </ul>
           </li>
@@ -502,5 +502,6 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/db.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
 </body>
 </html>
