--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
-            <!-- <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a> -->
-          </li>
+            <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
-              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="translate"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag">Türkmen</a></li>
-              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="translate"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag">Русский</a></li>
-              <!-- <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="lang"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag">English</a></li> -->
+            </li>
+              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="translate"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag"></a></li>
+              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="translate"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag"></a></li>
+              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="translate"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag"></a></li>
             </ul>
           </li>
         </ul>
@@ -87,7 +87,8 @@
   <!-- ======= hero Section ======= -->
   <section id="hero" class="curved">
     <div class="hero-content slogan" data-aos="fade-up">
-      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span class="lang" key="bitewilik2">«целостность & сохранность»</span></h2> 
+      <h2 class="lang" key="bitewilik1">Наш девиз:</h2>
+      <h2 class="lang" key="bitewilik2">«целостность & сохранность»</h2>
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
@@ -362,26 +363,26 @@
             <div class="ikonki">
               <img class="surat" src="images/icons/info.png" alt="sagat">
             </div>
-            <div class="shapes even">Информация</div>
+            <div class="shapes even lang">Информация</div>
             <div class="work-chart-text lang" key="ct2">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
           </div>
           <div class="guty">
             <div class="ikonki">
               <img class="surat" src="images/icons/analyze1.png" alt="search">
             </div>
-            <div class="shapes">Анализ</div>
+            <div class="shapes lang">Анализ</div>
             <div class="work-chart-text lang" key="ct3">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
             </div>
           </div>
           <div class="guty">
             <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
-            <div class="shapes even">Монтаж</div>
+            <div class="shapes even lang">Монтаж</div>
             <div class="work-chart-text lang" key="ct4">После согласования с Заказчиком происходит монтаж необходимого оборудования
             </div>
           </div>
           <div class="guty">
             <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
-            <div class="shapes">Защита</div>
+            <div class="shapes lang">Защита</div>
             <div class="work-chart-text lang" key="ct5">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
             </div>
           </div>
@@ -395,7 +396,7 @@
     <section id="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2 class="contact_us">Связаться с нами</h2>
+          <h2 class="lang" key="contact_us">Связаться с нами</h2>
         </div>
 
         <div class="row contact-info">
@@ -405,6 +406,7 @@
               <i class="bi bi-envelope" style="color:black; opacity: 0.8;"></i>
               <h3>Email</h3>
               <p><a href="mailto:zehinli.doganlar@mail.ru">zehinli.doganlar@mail.ru</a></p>
+              <p><a href="mailto:zehinli.doganlar@mail.ru">zehinli.doganlar@sanly.tm</a></p>
             </div>
           </div>
           
@@ -503,5 +505,6 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/db.js"></script>
   <script src="assets/js/jquery.min.js"></script>
+
 </body>
 </html>
