--- a/services.html
+++ b/services.html
@@ -68,12 +68,12 @@
           <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
-            <a href="#"><span key="active_lang" class="lang">EN</span><i class="bi bi-chevron-down langs"></i></a>
+            <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
-              <li><a href="#" onclick="changeLang('tm');" class="lang">TM</a></li>
-              </li>
-              <li><a href="#" onclick="changeLang('ru');" class="lang">RU</a></li>
-              <li><a href="#" onclick="changeLang('en');" class="lang">EN</a></li>
+            </li>
+              <li><a href="#tm" id="tm" onclick="changeLang('tm');" key="tm" class="translate"> <img class="flags" src="images/flags/flag_Turkmenistan.webp" alt="Turkmenistan flag"></a></li>
+              <li><a href="#ru" id="ru" onclick="changeLang('ru');" key="ru" class="translate"> <img class="flags" src="images/flags/flag_russian.png" alt="Russian flag"></a></li>
+              <li><a href="#en" id="en" onclick="changeLang('en');" key="en" class="translate"> <img class="flags" src="images/flags/flag_english.webp" alt="English flag"></a></li>
             </ul>
           </li>
         </ul>
@@ -265,6 +265,9 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/db.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+
 
 </body>
 
